change color/fix spacing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,5 +20,5 @@
   display: flex;
   align-items: center;
   gap: 20px;
-  margin-bottom: 200px;
+  margin-bottom: 400px;
 }
