--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -5,5 +5,5 @@
   align-items: center;
   height: 50px;
   padding: 10px;
-  background-color: aquamarine;
+  background-color: rgb(206,231,249);
 }
